Add a toy JSON parser, bump version to 2.0